--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -58,6 +58,7 @@
                     <a class="nav-link" href="https://github.com/besesito/">GitHub</a>
                     <a class="nav-link" href="{% static 'cv.pdf' %}">Reasume</a>
                     <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
+                    <a class="nav-link" href="{% url 'count' %}">Count Words App</a>
                 </div>
             </div>
         </div>
