--- a/countword/templates/count/count.html
+++ b/countword/templates/count/count.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.79.0">
-    <title>Besesito Developer · Blog</title>
+    <title>Besesito Developer · Words Count</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -63,9 +63,10 @@
 <br/>
 <div class="py-5 text-center container">
     <h1 class="fw-light">WORD COUNT</h1>
-    <form action="{% url 'counted' %}" />
+    <form action="{% url 'counted' %}" method="post">
+    {% csrf_token %}
     <div class="form-floating">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="fulltext"></textarea>
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 300px" name="fulltext"></textarea>
         <label for="floatingTextarea2">Input your text here</label>
     </div>
 
